<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.SettingsFragment">


    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        android:fontFamily="@font/poppins_semi_bold"
        android:textColor="@color/black"
        android:textSize="@dimen/_20sdp"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_20sdp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:orientation="vertical">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/withdraw_info_btn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:text="@string/withdraw_info"
            android:fontFamily="@font/poppins_regular"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/referral_info_btn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:text="@string/referral_info"
            android:fontFamily="@font/poppins_regular"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/ads_info_btn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:text="@string/ads_info"
            android:fontFamily="@font/poppins_regular"/>



    </LinearLayout>


</RelativeLayout>