<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AdsInfo">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ads_info"
        android:fontFamily="@font/poppins_semi_bold"
        android:textColor="@color/black"
        android:textSize="@dimen/_20sdp"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_20sdp"/>

    <LinearLayout
        android:id="@+id/info_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:layout_below="@id/title"
        android:layout_marginTop="@dimen/_10sdp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/banner_ad_id"
            android:fontFamily="@font/poppins_regular"/>

        <TextView
            android:id="@+id/tv_banner_ad_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_regular"
            android:textColor="@color/black"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/interstitial_ad_id"
            android:layout_marginTop="@dimen/_5sdp"
            android:fontFamily="@font/poppins_regular"/>

        <TextView
            android:id="@+id/tv_interstitial_ad_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_regular"
            android:textColor="@color/black"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/update_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/info_layout"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp">


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/banner_ad_id_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/banner_ad_id">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/update_banner_ad_id_btn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:text="@string/update"
            android:fontFamily="@font/poppins_regular"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/interstitial_ad_id_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/interstitial_ad_id"
            android:layout_marginTop="@dimen/_10sdp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/update_interstitial_ad_btn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:text="@string/update"
            android:fontFamily="@font/poppins_regular"/>



    </LinearLayout>

</RelativeLayout>