<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.WithdrawInfoActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/withdraw_info"
        android:fontFamily="@font/poppins_semi_bold"
        android:textColor="@color/black"
        android:textSize="@dimen/_20sdp"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_20sdp"/>

    <RelativeLayout
        android:id="@+id/info_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:layout_below="@id/title"
        android:layout_marginTop="@dimen/_10sdp">

        <TextView
            android:id="@+id/heading_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/minimum_withdraw_limit"
            android:fontFamily="@font/poppins_regular"
            android:textColor="@color/black"
            android:layout_marginEnd="@dimen/_5sdp"/>
        <TextView
            android:id="@+id/tv_minimum_withdraw_limit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/heading_1"
            android:fontFamily="@font/poppins_regular"
            android:textColor="@color/black"
            android:layout_marginStart="@dimen/_50sdp"
            android:layout_marginEnd="@dimen/_5sdp"/>

        <TextView
            android:id="@+id/heading_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/points_conversion"
            android:layout_alignParentEnd="true"
            android:fontFamily="@font/poppins_regular"
            android:textColor="@color/black"
            android:layout_marginStart="@dimen/_5sdp"
            tools:ignore="RelativeOverlap" />
        <TextView
            android:id="@+id/tv_points_conversion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/heading_1"
            android:fontFamily="@font/poppins_regular"
            android:textColor="@color/black"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="@dimen/_50sdp"/>


    </RelativeLayout>

    <LinearLayout
        android:id="@+id/withdraw_update_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/info_layout"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp">


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/minimum_withdraw_limit_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/minimum_withdraw_limit">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:inputType="number"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/points_conversion_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/points_conversion"
            android:layout_marginTop="@dimen/_10sdp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:inputType="number"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/update_withdraw_info_btn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:text="@string/update"
            android:fontFamily="@font/poppins_regular"/>


    </LinearLayout>


</RelativeLayout>