<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.HomeFragment">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dashboard"
        android:fontFamily="@font/poppins_semi_bold"
        android:textColor="@color/black"
        android:textSize="@dimen/_18sdp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_10sdp"/>

    <LinearLayout
        android:id="@+id/button_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:orientation="vertical">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/quiz_question_btn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:text="@string/quiz_question"
            app:icon="@drawable/ic_news"
            app:iconGravity="textStart"
            android:fontFamily="@font/poppins_regular"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/article_btn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:text="@string/article"
            app:icon="@drawable/ic_article"
            app:iconGravity="textStart"
            android:fontFamily="@font/poppins_regular"/>


    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/button_layout"
        android:layout_marginTop="@dimen/_5sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:orientation="vertical">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/user_card"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_90sdp"
                app:cardCornerRadius="@dimen/_10sdp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/bg_1">


                    <TextView
                        android:id="@+id/text_user"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:layout_marginStart="@dimen/_20sdp"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:fontFamily="@font/poppins_medium"
                        android:text="@string/users"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_20sdp" />

                    <ImageView
                        android:id="@+id/user_icon"
                        android:layout_width="@dimen/_45sdp"
                        android:layout_height="@dimen/_45sdp"
                        android:layout_below="@id/text_user"
                        android:layout_marginStart="@dimen/_15sdp"
                        android:src="@drawable/ic_user"
                        android:contentDescription="@string/image"/>

                    <TextView
                        android:id="@+id/total_users"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/text_user"
                        android:layout_marginStart="@dimen/_20sdp"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:layout_toEndOf="@id/user_icon"
                        android:fontFamily="@font/poppins_medium"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_25sdp" />


                </RelativeLayout>


            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/withdraw_request_card"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_90sdp"
                android:layout_marginTop="@dimen/_10sdp"
                app:cardCornerRadius="@dimen/_10sdp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/bg_2">


                    <TextView
                        android:id="@+id/text_withdraw_request"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:layout_marginStart="@dimen/_20sdp"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:fontFamily="@font/poppins_medium"
                        android:text="@string/withdraw_requests"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_20sdp" />

                    <ImageView
                        android:id="@+id/wallet_icon"
                        android:layout_width="@dimen/_45sdp"
                        android:layout_height="@dimen/_45sdp"
                        android:layout_below="@id/text_withdraw_request"
                        android:layout_marginStart="@dimen/_15sdp"
                        android:src="@drawable/ic_wallet"
                        android:contentDescription="@string/image"/>

                    <TextView
                        android:id="@+id/total_withdraw_requests"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/text_withdraw_request"
                        android:layout_marginStart="@dimen/_20sdp"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:layout_toEndOf="@id/wallet_icon"
                        android:fontFamily="@font/poppins_medium"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_25sdp" />


                </RelativeLayout>


            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/quiz_question_card"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_90sdp"
                android:layout_marginTop="@dimen/_10sdp"
                app:cardCornerRadius="@dimen/_10sdp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/bg_3">


                    <TextView
                        android:id="@+id/text_quiz_questions"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:layout_marginStart="@dimen/_20sdp"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:fontFamily="@font/poppins_medium"
                        android:text="@string/quiz_question"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_20sdp" />

                    <ImageView
                        android:id="@+id/quiz_icon"
                        android:layout_width="@dimen/_45sdp"
                        android:layout_height="@dimen/_45sdp"
                        android:layout_below="@id/text_quiz_questions"
                        android:layout_marginStart="@dimen/_15sdp"
                        android:src="@drawable/ic_news"
                        android:contentDescription="@string/image"/>

                    <TextView
                        android:id="@+id/total_quiz_questions"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/text_quiz_questions"
                        android:layout_marginStart="@dimen/_20sdp"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:layout_toEndOf="@id/quiz_icon"
                        android:fontFamily="@font/poppins_medium"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_25sdp" />


                </RelativeLayout>


            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>


    </ScrollView>




</RelativeLayout>